--- a/css/_todo.scss
+++ b/css/_todo.scss
@@ -1,8 +1,16 @@
 .todo {
+    position: relative;
     max-width: 600px;
     margin: 0 auto;
     background-color: $color-gray;
     box-shadow: 4px 4px 0 rgba($color: #000000, $alpha: 0.4);
+    &__modal {
+        position: absolute;
+        z-index: 999;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
     &__header {
         position: relative;
         z-index: 2;
