--- a/css/_todo.scss
+++ b/css/_todo.scss
@@ -7,9 +7,9 @@
     &__modal {
         position: absolute;
         z-index: 999;
-        top: 50%;
+        top: 20px;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translateX(-50%);
     }
     &__header {
         position: relative;
