--- a/css/_task.scss
+++ b/css/_task.scss
@@ -28,7 +28,7 @@
         border: 3px solid $color-main;
         border-radius: 0;
         box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
-        transition: box-shadow 0.2s ease-in, width 0.2s linear;
+        transition: box-shadow 0.2s ease-in, width 0.2s linear, opacity 0.3s linear;
         -webkit-appearance: none;
         &::placeholder {
             font-size: inherit;
@@ -40,7 +40,6 @@
     &__input--price {
         display: none;
         max-width: 70px;
-        transition: opacity 0.3s linear;
     }
     &__button {
         width: 40px;
