--- a/css/_todo.scss
+++ b/css/_todo.scss
@@ -49,7 +49,7 @@
         border: none;
         appearance: none;
         box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
-        transition: height 0.2s ease-in;
+        // transition: height 0.2s ease-in;
         &::-webkit-progress-bar {
             background-color: $color-gray-light;
             border-radius: 0;
@@ -66,6 +66,10 @@
         &::-moz-progress-value {
             transition: width 0.3s linear;
         }
+    }
+    &__progress--hidden {
+        height: 0;
+        margin: 0;
     }
 }
 
