--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,6 @@ body, h1, h2, h3, form, input, p {
           appearance: none;
   -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
           box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
-  -webkit-transition: height 0.2s ease-in;
-  transition: height 0.2s ease-in;
 }
 
 .todo__progress::-webkit-progress-bar {
@@ -112,6 +110,11 @@ body, h1, h2, h3, form, input, p {
 .todo__progress::-moz-progress-value {
   -webkit-transition: width 0.3s linear;
   transition: width 0.3s linear;
+}
+
+.todo__progress--hidden {
+  height: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 600px) {
@@ -347,6 +350,10 @@ body, h1, h2, h3, form, input, p {
   transition: opacity 0.3s linear;
 }
 
+.task__date--hidden {
+  display: none;
+}
+
 .task__input {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -388,8 +395,11 @@ body, h1, h2, h3, form, input, p {
 }
 
 .task__input--price {
-  display: none;
   max-width: 70px;
+}
+
+.task__input--price-hidden {
+  display: none;
 }
 
 .task__button {
