--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body, h1, h2, h3, form, input, p {
   display: block;
   width: 100%;
   height: 25px;
-  margin-top: 20px;
+  margin-top: 10px;
   border: none;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -411,6 +411,18 @@ body, h1, h2, h3, form, input, p {
           animation: invalid-price 0.5s forwards ease-in;
 }
 
+.task__input--summ {
+  display: block;
+  max-width: 70px;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: 46px;
+}
+
+.task__input--summ-hidden {
+  display: none;
+}
+
 .task__button {
   width: 40px;
   height: 40px;
@@ -502,7 +514,7 @@ body, h1, h2, h3, form, input, p {
 }
 
 .task--date-active:not(:last-child) {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 @-webkit-keyframes invalid {
@@ -595,7 +607,11 @@ body, h1, h2, h3, form, input, p {
     border-width: 2px;
   }
   .task__input--price {
-    max-width: 55px;
+    max-width: 40px;
+  }
+  .task__input--summ {
+    max-width: 40px;
+    margin-right: 36px;
   }
   .task__button {
     width: 30px;
