removing items (price, task) from arrays on closing tasks

--- a/css/_task.scss
+++ b/css/_task.scss
@@ -55,6 +55,7 @@
         margin-top: 10px;
         margin-left: auto;
         margin-right: 46px;
+        border-color: $color-second;
     }
     &__input--summ-hidden {
         display: none;
