added google verification, about block

--- a/css/_todo.scss
+++ b/css/_todo.scss
@@ -49,7 +49,6 @@
         border: none;
         appearance: none;
         box-shadow: 3px 3px 3px rgba($color: #000000, $alpha: 0.25);
-        // transition: height 0.2s ease-in;
         &::-webkit-progress-bar {
             background-color: $color-gray-light;
             border-radius: 0;
@@ -70,6 +69,18 @@
     &__progress--hidden {
         height: 0;
         margin: 0;
+    }
+    &__about {
+        position: absolute;
+        z-index: -1;
+        width: 80%;
+        left: 50%;
+        bottom: -50px;
+        // bottom: 0;
+        transform: translateX(-50%);
+    }
+    &__about--active {
+        
     }
 }
 
