--- a/css/_about.scss
+++ b/css/_about.scss
@@ -1,29 +1,34 @@
 .about {
-    padding: 10px;
+    padding: 20px 10px;
     text-align: center;
-    background-color: inherit;
+    background-color: $color-gray-light;
+    border: 3px solid $color-gray;
+    border-top: none;
+    box-shadow: inset 0 0 5px rgba($color: #000000, $alpha: 0.25);
     &__text {
-
+        color: $color-gray-dark;
     }
     &__link {
         position: relative;
         display: inline-block;
+        margin-left: 25px;
         color: $color-main;
         text-decoration: none;
-        transition: transform 0.3s ease-in;
+        transition: color 0.2s ease-in;
         &:hover {
-            transform: translateX(30px);
+            color: $color-second;
         }
         &::before {
             content: '';
             position: absolute;
             top: 50%;
             left: 0;
-            vertical-align: text-bottom;
             width: 25px;
             height: 25px;
-            background-color: red;
-            transform: translate(-50%, -50%);
+            background-image: url('../image/github-logo.svg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            transform: translate(-30px, -50%);
         }
     }
 }
