--- a/css/_todo.scss
+++ b/css/_todo.scss
@@ -75,12 +75,12 @@
         z-index: -1;
         width: 80%;
         left: 50%;
-        bottom: -50px;
-        // bottom: 0;
-        transform: translateX(-50%);
+        bottom: 0;
+        transform: translate(-50%, 0);
+        transition: transform 0.3s ease-in;
     }
     &__about--active {
-        
+        transform: translate(-50%, 100%);
     }
 }
 
