--- a/css/style.css
+++ b/css/style.css
@@ -122,9 +122,18 @@ body, h1, h2, h3, form, input, p {
   z-index: -1;
   width: 80%;
   left: 50%;
-  bottom: -50px;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  bottom: 0;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  -webkit-transition: -webkit-transform 0.3s ease-in;
+  transition: -webkit-transform 0.3s ease-in;
+  transition: transform 0.3s ease-in;
+  transition: transform 0.3s ease-in, -webkit-transform 0.3s ease-in;
+}
+
+.todo__about--active {
+  -webkit-transform: translate(-50%, 100%);
+          transform: translate(-50%, 100%);
 }
 
 @media screen and (max-width: 600px) {
@@ -801,25 +810,31 @@ body, h1, h2, h3, form, input, p {
 }
 
 .about {
-  padding: 10px;
+  padding: 20px 10px;
   text-align: center;
-  background-color: inherit;
+  background-color: #eeeeee;
+  border: 3px solid #e2e2e2;
+  border-top: none;
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.25);
+          box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.25);
+}
+
+.about__text {
+  color: #606060;
 }
 
 .about__link {
   position: relative;
   display: inline-block;
+  margin-left: 25px;
   color: #2fb6cf;
   text-decoration: none;
-  -webkit-transition: -webkit-transform 0.3s ease-in;
-  transition: -webkit-transform 0.3s ease-in;
-  transition: transform 0.3s ease-in;
-  transition: transform 0.3s ease-in, -webkit-transform 0.3s ease-in;
+  -webkit-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
 }
 
 .about__link:hover {
-  -webkit-transform: translateX(30px);
-          transform: translateX(30px);
+  color: #5ebe7f;
 }
 
 .about__link::before {
@@ -827,11 +842,12 @@ body, h1, h2, h3, form, input, p {
   position: absolute;
   top: 50%;
   left: 0;
-  vertical-align: text-bottom;
   width: 25px;
   height: 25px;
-  background-color: red;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  background-image: url("../image/github-logo.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-transform: translate(-30px, -50%);
+          transform: translate(-30px, -50%);
 }
 /*# sourceMappingURL=style.css.map */
